@@ -1,16 +1,19 @@
 package com.example.projectquestonjava.approach.calendar.presentation.viewmodels;
 
-import android.os.Build;
-
+import android.net.Uri;
 import androidx.annotation.NonNull;
+import androidx.annotation.Nullable;
 import androidx.lifecycle.LiveData;
 import androidx.lifecycle.MediatorLiveData;
 import androidx.lifecycle.MutableLiveData;
 import androidx.lifecycle.SavedStateHandle;
 import androidx.lifecycle.Transformations;
 import androidx.lifecycle.ViewModel;
+
 import com.example.projectquestonjava.core.data.model.core.Tag;
-import com.example.projectquestonjava.core.di.DefaultDispatcher;
+import com.example.projectquestonjava.core.di.DefaultDispatcher; // Предполагаем, что это Executor
+import com.example.projectquestonjava.core.di.IODispatcher; // И это тоже Executor
+import com.example.projectquestonjava.core.managers.SnackbarManager;
 import com.example.projectquestonjava.core.utils.DateTimeUtils;
 import com.example.projectquestonjava.core.utils.Logger;
 import com.example.projectquestonjava.approach.calendar.domain.model.TaskCreationEvent;
@@ -25,6 +28,7 @@ import com.example.projectquestonjava.core.domain.usecases.tag.DeleteTagsUseCase
 import com.google.common.util.concurrent.FutureCallback;
 import com.google.common.util.concurrent.Futures;
 import com.google.common.util.concurrent.ListenableFuture;
+import com.google.common.util.concurrent.MoreExecutors;
 
 import java.io.IOException;
 import java.time.LocalDate;
@@ -37,13 +41,10 @@ import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.Objects;
 import java.util.Set;
-import java.util.concurrent.ExecutionException;
 import java.util.concurrent.Executor;
 import java.util.stream.Collectors;
 import javax.inject.Inject;
 import dagger.hilt.android.lifecycle.HiltViewModel;
-
-// Loadable и CombinedState уже были определены как Java классы.
 
 @HiltViewModel
 public class TaskCreationViewModel extends ViewModel {
@@ -52,22 +53,26 @@ public class TaskCreationViewModel extends ViewModel {
     private final CreateCalendarTaskUseCase createCalendarTaskUseCase;
     private final UpdateCalendarTaskUseCase updateCalendarTaskUseCase;
     private final GetTaskInputForEditUseCase getTaskInputForEditUseCase;
+    private final GetAllTagsUseCase getAllTagsUseCase; // Теперь возвращает LiveData
     private final AddTagUseCase addTagUseCase;
     private final DeleteTagsUseCase deleteTagsUseCase;
-    private final Executor defaultExecutor; // Для фоновых задач
+    private final DateTimeUtils dateTimeUtils;
+    @IODispatcher private final Executor ioExecutor; // Для операций с БД
+    private final Executor mainExecutor; // Для обновлений LiveData из фоновых потоков
     private final Logger logger;
+    private final SnackbarManager snackbarManager;
 
-    private final Long taskId;
+    private final Long taskId; // Может быть null
     private final boolean isEditMode;
 
-    private final MutableLiveData<TaskCreationState> _uiStateLiveData = new MutableLiveData<>();
-    public LiveData<TaskCreationState> uiStateLiveData = _uiStateLiveData;
+    // --- LiveData для UI ---
+    private final MutableLiveData<TaskCreationState> _uiStateLiveData;
+    public final LiveData<TaskCreationState> uiStateLiveData;
 
-    // Используем LiveData для тегов, полученных из GetAllTagsUseCase
-    private final LiveData<Loadable<List<Tag>>> tagsLoadableLiveData;
+    // LiveData для списка всех тегов
+    public final LiveData<Loadable<List<Tag>>> allTagsLoadableLiveData;
 
-
-    // CombinedState LiveData
+    // Объединенное состояние
     private final MediatorLiveData<CombinedState> _combinedStateLiveData = new MediatorLiveData<>();
     public LiveData<CombinedState> combinedStateLiveData = _combinedStateLiveData;
 
@@ -77,134 +82,153 @@ public class TaskCreationViewModel extends ViewModel {
             CreateCalendarTaskUseCase createCalendarTaskUseCase,
             UpdateCalendarTaskUseCase updateCalendarTaskUseCase,
             GetTaskInputForEditUseCase getTaskInputForEditUseCase,
-            GetAllTagsUseCase getAllTagsUseCase,
+            GetAllTagsUseCase getAllTagsUseCase, // UseCase
             AddTagUseCase addTagUseCase,
             DeleteTagsUseCase deleteTagsUseCase,
             DateTimeUtils dateTimeUtils,
-            @DefaultDispatcher Executor defaultExecutor,
+            @IODispatcher Executor ioExecutor, // Для фоновых задач
             SavedStateHandle savedStateHandle,
-            Logger logger) throws ExecutionException, InterruptedException {
+            SnackbarManager snackbarManager,
+            Logger logger) {
         this.createCalendarTaskUseCase = createCalendarTaskUseCase;
         this.updateCalendarTaskUseCase = updateCalendarTaskUseCase;
         this.getTaskInputForEditUseCase = getTaskInputForEditUseCase;
+        this.getAllTagsUseCase = getAllTagsUseCase;
         this.addTagUseCase = addTagUseCase;
         this.deleteTagsUseCase = deleteTagsUseCase;
-        this.defaultExecutor = defaultExecutor;
+        this.dateTimeUtils = dateTimeUtils;
+        this.ioExecutor = ioExecutor;
+        this.mainExecutor = MoreExecutors.directExecutor(); // Или ContextCompat.getMainExecutor(context) если есть context
         this.logger = logger;
+        this.snackbarManager = snackbarManager;
 
         String taskIdString = savedStateHandle.get("taskId");
         this.taskId = (taskIdString != null) ? Long.parseLong(taskIdString) : null;
         this.isEditMode = (this.taskId != null);
 
-        // Инициализация начального состояния UI
-        TaskInput initialInput = new TaskInput(
-                null, "", "",
-                dateTimeUtils.currentLocalDateTime().plusMinutes(15).withSecond(0).withNano(0),
-                null, Collections.emptySet()
+        TaskInput initialInput = TaskInput.EMPTY.copy(
+                null, // id
+                "",   // title
+                "",   // description
+                dateTimeUtils.currentLocalDateTime().plusMinutes(15).withSecond(0).withNano(0), // dueDate
+                null, // recurrenceRule
+                Collections.emptySet() // selectedTags
         );
-        _uiStateLiveData.setValue(new TaskCreationState(initialInput, false, false, false, false, null, null, isEditMode));
+        _uiStateLiveData = new MutableLiveData<>(
+                new TaskCreationState(initialInput, false, false, false, true, null, null, isEditMode)
+        );
+        uiStateLiveData = _uiStateLiveData;
 
-        // GetAllTagsUseCase.execute() теперь возвращает LiveData<List<Tag>>
-        // Преобразуем его в LiveData<Loadable<List<Tag>>>
-        tagsLoadableLiveData = Transformations.map(getAllTagsUseCase.execute(), tagsList -> {
+        // GetAllTagsUseCase.execute() возвращает LiveData<List<Tag>>
+        // Преобразуем в LiveData<Loadable<List<Tag>>>
+        allTagsLoadableLiveData = Transformations.map(getAllTagsUseCase.execute(), tagsList -> {
             if (tagsList != null) {
-                logger.debug(TAG, "Loaded " + tagsList.size() + " tags from LiveData.");
-                // Попытка обновить выбранные теги, если задача уже загружена
+                logger.debug(TAG, "Tags loaded via LiveData: " + tagsList.size());
                 TaskCreationState currentUi = _uiStateLiveData.getValue();
-                if (isEditMode && currentUi != null && !currentUi.isLoading()) {
-                    updateSelectedTagsFromLoadedList(tagsList, currentUi); // Передаем флаг для postValue
+                if (isEditMode && currentUi != null && !currentUi.isLoading() && currentUi.getTaskInput().getId() != null) {
+                    // Попытка обновить выбранные теги, если задача уже загружена
+                    updateSelectedTagsFromLoadedList(tagsList, currentUi.getTaskInput());
                 }
                 return new Loadable.Success<>(tagsList);
             } else {
-                logger.error(TAG, "Failed to load tags, LiveData from use case returned null.");
-                return new Loadable.Error<List<Tag>>(new IOException("Failed to load tags"));
+                logger.warn(TAG, "Tags list from LiveData is null.");
+                // Можно вернуть Loadable.Error или Loadable.Success с пустым списком,
+                // в зависимости от того, как хотим обрабатывать null от DAO.
+                return new Loadable.Success<>(Collections.emptyList());
             }
         });
 
-
-        // Настраиваем MediatorLiveData для combinedStateLiveData
+        // Настройка MediatorLiveData
         _combinedStateLiveData.addSource(_uiStateLiveData, uiState -> {
-            Loadable<List<Tag>> currentTagsLoadable = tagsLoadableLiveData.getValue();
-            if (uiState != null && currentTagsLoadable != null) {
-                _combinedStateLiveData.setValue(new CombinedState(uiState, currentTagsLoadable));
+            Loadable<List<Tag>> currentTags = allTagsLoadableLiveData.getValue();
+            if (uiState != null && currentTags != null) {
+                _combinedStateLiveData.setValue(new CombinedState(uiState, currentTags));
             }
         });
-        _combinedStateLiveData.addSource(tagsLoadableLiveData, tagsLoadable -> {
+        _combinedStateLiveData.addSource(allTagsLoadableLiveData, tagsLoadable -> {
             TaskCreationState currentUiState = _uiStateLiveData.getValue();
             if (tagsLoadable != null && currentUiState != null) {
                 _combinedStateLiveData.setValue(new CombinedState(currentUiState, tagsLoadable));
             }
         });
+        // Инициализация MediatorLiveData начальными значениями, если они уже есть
+        if (_uiStateLiveData.getValue() != null && allTagsLoadableLiveData.getValue() != null) {
+            _combinedStateLiveData.setValue(new CombinedState(_uiStateLiveData.getValue(), allTagsLoadableLiveData.getValue()));
+        }
 
-        loadInitialTaskDataIfNeeded();
+        loadInitialData();
     }
 
-    private void loadInitialTaskDataIfNeeded() throws ExecutionException, InterruptedException {
-        logger.debug(TAG, "Initializing Task Data. Edit mode: " + isEditMode + ", Task ID: " + taskId);
+    private void loadInitialData() {
+        logger.debug(TAG, "loadInitialData called. Edit mode: " + isEditMode + ", Task ID: " + taskId);
+        // Состояние загрузки уже установлено в конструкторе
         if (isEditMode && taskId != null) {
             loadExistingTaskInternal(taskId);
         } else {
-            updateUiState(state -> state.copy(null, null, null, null, false, null, null, null), false);
+            // Если не режим редактирования, просто убираем флаг загрузки из UI
+            updateUiState(state -> state.copy(null,null,null,null, false, null, null, null));
         }
     }
 
-    private void loadExistingTaskInternal(long id) throws ExecutionException, InterruptedException {
+    private void loadExistingTaskInternal(long id) {
         logger.debug(TAG, "Loading existing task with id=" + id);
-        updateUiState(state -> state.copy(null, null, null, null, true, null, null, null), false);
+        // _uiStateLiveData.update уже установлен isLoading=true
+        ListenableFuture<ListenableFuture<TaskInput>> futureOfFuture = getTaskInputForEditUseCase.executeAsync(id);
 
-        // GetTaskInputForEditUseCase.executeAsync возвращает ListenableFuture<ListenableFuture<TaskInput>>
-        // это нужно упростить до ListenableFuture<TaskInput>
-        // Предположим, executeAsync изменен на execute() и возвращает ListenableFuture<TaskInput>
-        ListenableFuture<TaskInput> future = getTaskInputForEditUseCase.executeAsync(id).get();
-        // Если executeAsync(id) возвращает вложенный Future, его нужно "развернуть":
-        // ListenableFuture<TaskInput> flattenedFuture = Futures.transformAsync(future, f -> f, MoreExecutors.directExecutor());
-
-        Futures.addCallback(future, new FutureCallback<TaskInput>() {
+        Futures.addCallback(futureOfFuture, new FutureCallback<ListenableFuture<TaskInput>>() {
             @Override
-            public void onSuccess(TaskInput taskInput) {
-                updateUiState(state -> state.copy(taskInput, null, null, null, false, null, null, null), true);
-                logger.info(TAG, "Task " + id + " loaded successfully for editing.");
-                Loadable<List<Tag>> tagsLoadable = tagsLoadableLiveData.getValue(); // Используем tagsLoadableLiveData
-                if (tagsLoadable instanceof Loadable.Success) {
-                    updateSelectedTagsFromLoadedList(((Loadable.Success<List<Tag>>) tagsLoadable).getData(), _uiStateLiveData.getValue());
-                }
+            public void onSuccess(ListenableFuture<TaskInput> taskInputFuture) {
+                Futures.addCallback(taskInputFuture, new FutureCallback<TaskInput>() {
+                    @Override
+                    public void onSuccess(TaskInput taskInput) {
+                        updateUiState(state -> state.copy(taskInput,null,null,null, false, null, null, null));
+                        logger.info(TAG, "Task " + id + " loaded successfully for editing.");
+                        Loadable<List<Tag>> tagsLoadable = allTagsLoadableLiveData.getValue();
+                        if (tagsLoadable instanceof Loadable.Success) {
+                            updateSelectedTagsFromLoadedList(((Loadable.Success<List<Tag>>) tagsLoadable).getData(), taskInput);
+                        }
+                    }
+                    @Override
+                    public void onFailure(@NonNull Throwable t) {
+                        handleLoadTaskFailure(t, id);
+                    }
+                }, ioExecutor);
             }
-
             @Override
             public void onFailure(@NonNull Throwable t) {
-                updateUiState(state -> state.copy(null, null, null, null, false, toUserFriendlyMessage(t), null, null), true);
-                logger.error(TAG, "Failed to load task " + id + " for editing.", t);
+                handleLoadTaskFailure(t, id);
             }
-        }, defaultExecutor); // Используем defaultExecutor (который должен быть ioExecutor) для коллбэка
+        }, ioExecutor);
     }
 
-    private void updateSelectedTagsFromLoadedList(List<Tag> allTags, TaskCreationState currentUiState) {
-        if (currentUiState == null || currentUiState.getTaskInput().getId() == null || !Objects.equals(currentUiState.getTaskInput().getId(), taskId)) return;
+    private void handleLoadTaskFailure(Throwable t, long id) {
+        logger.error(TAG, "Failed to load task " + id + " for editing.", t);
+        updateUiState(state -> state.copy(null,null,null,null, false, toUserFriendlyMessage(t), null, null));
+    }
 
-        TaskInput currentInput = currentUiState.getTaskInput();
-        Set<Long> selectedTagIds = currentInput.getSelectedTags().stream().map(Tag::getId).collect(Collectors.toSet());
+
+    private void updateSelectedTagsFromLoadedList(List<Tag> allTags, TaskInput currentLoadedInput) {
+        TaskCreationState currentUiState = _uiStateLiveData.getValue();
+        if (currentUiState == null || !Objects.equals(currentLoadedInput.getId(), taskId)) return;
+
+        Set<Long> selectedTagIds = currentLoadedInput.getSelectedTags().stream().map(Tag::getId).collect(Collectors.toSet());
         Set<Tag> fullSelectedTags = allTags.stream().filter(tag -> selectedTagIds.contains(tag.getId())).collect(Collectors.toSet());
 
-        if (!fullSelectedTags.equals(currentInput.getSelectedTags())) {
-            logger.debug(TAG, "Updating selected tags with full objects.");
-            TaskInput updatedTaskInput = new TaskInput(
-                    currentInput.getId(), currentInput.getTitle(), currentInput.getDescription(),
-                    currentInput.getDueDate(), currentInput.getRecurrenceRule(), fullSelectedTags
+        if (!fullSelectedTags.equals(currentLoadedInput.getSelectedTags())) {
+            logger.debug(TAG, "Updating selected tags with full objects for loaded task.");
+            TaskInput updatedTaskInputWithFullTags = new TaskInput(
+                    currentLoadedInput.getId(), currentLoadedInput.getTitle(), currentLoadedInput.getDescription(),
+                    currentLoadedInput.getDueDate(), currentLoadedInput.getRecurrenceRule(), fullSelectedTags
             );
-            updateUiState(state -> state.copy(updatedTaskInput, null, null, null, null, null, null, null), true);
+            // Обновляем только taskInput в текущем состоянии
+            updateUiState(state -> state.copy(updatedTaskInputWithFullTags, null,null,null,null,null,null, null));
         }
     }
 
-
-    private void updateUiState(UiStateUpdater updater, boolean usePostValue) {
+    private void updateUiState(UiStateUpdater updater) {
         TaskCreationState currentState = _uiStateLiveData.getValue();
         if (currentState != null) {
-            TaskCreationState newState = updater.update(currentState);
-            if (usePostValue) {
-                _uiStateLiveData.postValue(newState);
-            } else {
-                _uiStateLiveData.setValue(newState);
-            }
+            _uiStateLiveData.postValue(updater.update(currentState));
         }
     }
 
@@ -213,16 +237,17 @@ public class TaskCreationViewModel extends ViewModel {
         TaskCreationState update(TaskCreationState currentState);
     }
 
-    // --- Обновление полей ---
     private void updateTaskInput(TaskInputUpdater updater) {
         updateUiState(state -> {
             TaskInput currentTaskInput = state.getTaskInput();
-            TaskInput updatedTaskInput = updater.update(new TaskInput( // Создаем копию для изменения
+            // Создаем копию для изменения, чтобы не модифицировать существующий объект в LiveData
+            TaskInput mutableCopy = new TaskInput(
                     currentTaskInput.getId(), currentTaskInput.getTitle(), currentTaskInput.getDescription(),
                     currentTaskInput.getDueDate(), currentTaskInput.getRecurrenceRule(), new HashSet<>(currentTaskInput.getSelectedTags())
-            ));
+            );
+            TaskInput updatedTaskInput = updater.update(mutableCopy);
             return state.copy(updatedTaskInput, null, null, null, null, null, null, null);
-        }, false);
+        });
     }
 
     @FunctionalInterface
@@ -258,27 +283,28 @@ public class TaskCreationViewModel extends ViewModel {
         closeRecurrenceDialog();
     }
 
-    // --- Диалоги ---
-    public void openDateDialog() { updateUiState(state -> state.copy(null, true, null, null, null, null, null, null), false); }
-    public void closeDateDialog() { updateUiState(state -> state.copy(null, false, null, null, null, null, null, null), false); }
-    public void openTimeDialog() { updateUiState(state -> state.copy(null, null, true, null, null, null, null, null), false); }
-    public void closeTimeDialog() { updateUiState(state -> state.copy(null, null, false, null, null, null, null, null), false); }
-    public void openRecurrenceDialog() { updateUiState(state -> state.copy(null, null, null, true, null, null, null, null), false); }
-    public void closeRecurrenceDialog() { updateUiState(state -> state.copy(null, null, null, false, null, null, null, null), false); }
-
+    public void openDateDialog() { updateUiState(state -> state.copy(null, true, null, null, null, null, null, null)); }
+    public void closeDateDialog() { updateUiState(state -> state.copy(null, false, null, null, null, null, null, null)); }
+    public void openTimeDialog() { updateUiState(state -> state.copy(null, null, true, null, null, null, null, null)); }
+    public void closeTimeDialog() { updateUiState(state -> state.copy(null, null, false, null, null, null, null, null)); }
+    public void openRecurrenceDialog() { updateUiState(state -> state.copy(null, null, null, true, null, null, null, null)); }
+    public void closeRecurrenceDialog() { updateUiState(state -> state.copy(null, null, null, false, null, null, null, null)); }
 
     public void toggleTagSelection(Tag tag) {
         updateTaskInput(taskInput -> {
-            Set<Tag> currentTags = new HashSet<>(taskInput.getSelectedTags());
+            Set<Tag> currentTags = new HashSet<>(taskInput.getSelectedTags()); // Создаем изменяемую копию
             boolean removed = currentTags.removeIf(t -> t.getId() == tag.getId());
             if (!removed) {
-                Loadable<List<Tag>> tagsLoadable = tagsLoadableLiveData.getValue(); // Используем tagsLoadableLiveData
+                Loadable<List<Tag>> tagsLoadable = allTagsLoadableLiveData.getValue();
                 if (tagsLoadable instanceof Loadable.Success) {
-                    Tag fullTag = ((Loadable.Success<List<Tag>>) tagsLoadable).getData().stream()
-                            .filter(t -> t.getId() == tag.getId()).findFirst().orElse(tag);
-                    currentTags.add(fullTag);
+                    // Пытаемся найти полный объект Tag в загруженном списке
+                    Tag fullTagFromList = ((Loadable.Success<List<Tag>>) tagsLoadable).getData().stream()
+                            .filter(t -> t.getId() == tag.getId())
+                            .findFirst()
+                            .orElse(tag); // Если не нашли, используем переданный (хотя это странно)
+                    currentTags.add(fullTagFromList);
                 } else {
-                    currentTags.add(tag);
+                    currentTags.add(tag); // Если теги не загружены, добавляем как есть
                 }
             }
             taskInput.setSelectedTags(currentTags);
@@ -288,15 +314,15 @@ public class TaskCreationViewModel extends ViewModel {
 
     public void addTag(String tagName) {
         if (tagName == null || tagName.trim().isEmpty()) {
-            updateUiState(state -> state.copy(null, null, null, null, null, "Имя тега не может быть пустым", null, null), false);
+            updateUiState(state -> state.copy(null, null, null, null, null, "Имя тега не может быть пустым", null, null));
             return;
         }
-        Loadable<List<Tag>> tagsLoadable = tagsLoadableLiveData.getValue();
+        Loadable<List<Tag>> tagsLoadable = allTagsLoadableLiveData.getValue();
         if (tagsLoadable instanceof Loadable.Success) {
             boolean exists = ((Loadable.Success<List<Tag>>) tagsLoadable).getData().stream()
                     .anyMatch(t -> t.getName().equalsIgnoreCase(tagName.trim()));
             if (exists) {
-                updateUiState(state -> state.copy(null, null, null, null, null, "Тег с таким именем уже существует", null, null), false);
+                updateUiState(state -> state.copy(null, null, null, null, null, "Тег с таким именем уже существует", null, null));
                 return;
             }
         }
@@ -305,13 +331,17 @@ public class TaskCreationViewModel extends ViewModel {
         ListenableFuture<Long> future = addTagUseCase.execute(tagName);
         Futures.addCallback(future, new FutureCallback<Long>() {
             @Override
-            public void onSuccess(Long result) { /* LiveData тегов обновится автоматически */ }
+            public void onSuccess(Long result) {
+                // LiveData тегов обновится автоматически, что вызовет обновление allTagsLoadableLiveData
+                // и, следовательно, _combinedStateLiveData. Snackbar об успехе не нужен тут.
+                logger.info(TAG, "Tag '" + tagName + "' added successfully with id " + result);
+            }
             @Override
             public void onFailure(@NonNull Throwable t) {
-                updateUiState(state -> state.copy(null, null, null, null, null, toUserFriendlyMessage(t), null, null), true);
                 logger.error(TAG, "Failed to add tag '" + tagName + "'", t);
+                updateUiState(state -> state.copy(null, null, null, null, null, toUserFriendlyMessage(t), null, null));
             }
-        }, defaultExecutor);
+        }, mainExecutor); // Коллбэк на mainExecutor для обновления UI
     }
 
     public void deleteSelectedTags() {
@@ -321,71 +351,71 @@ public class TaskCreationViewModel extends ViewModel {
         List<Tag> tagsToDelete = new ArrayList<>(currentState.getTaskInput().getSelectedTags());
         updateTaskInput(input -> { input.setSelectedTags(Collections.emptySet()); return input; });
 
-        if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.UPSIDE_DOWN_CAKE) {
-            logger.debug(TAG, "Deleting selected tags: " + tagsToDelete.stream().map(Tag::getId).toList());
-        }
+        logger.debug(TAG, "Deleting selected tags: " + tagsToDelete.stream().map(Tag::getId).collect(Collectors.toList()));
         ListenableFuture<Void> future = deleteTagsUseCase.execute(tagsToDelete);
         Futures.addCallback(future, new FutureCallback<Void>() {
             @Override
             public void onSuccess(Void result) { /* LiveData тегов обновится */ }
             @Override
             public void onFailure(@NonNull Throwable t) {
-                updateUiState(state -> state.copy(null, null, null, null, null, toUserFriendlyMessage(t), null, null), true);
                 logger.error(TAG, "Failed to delete selected tags", t);
-                // Перезагрузка тегов здесь может быть излишней, если LiveData из getAllTagsUseCase обновляется
+                updateUiState(state -> state.copy(null, null, null, null, null, toUserFriendlyMessage(t), null, null));
+                // TODO: Возможно, стоит откатить удаление из UI, если удаление на бэке не удалось,
+                // но это усложнит логику. Проще будет перезагрузить теги.
             }
-        }, defaultExecutor);
+        }, mainExecutor);
     }
 
     public void saveTask() {
         if (!validateInput()) return;
         TaskCreationState currentState = Objects.requireNonNull(_uiStateLiveData.getValue());
-        updateUiState(state -> state.copy(null, null, null, null, true, null, null, null), false);
+        updateUiState(state -> state.copy(null, null, null, null, true, null, null, null));
         TaskInput taskInputToSave = currentState.getTaskInput();
 
         logger.debug(TAG, "Saving task (Edit mode: " + isEditMode + "): " + taskInputToSave.getTitle());
 
-        ListenableFuture<?> operationFuture; // Тип зависит от UseCase
+        ListenableFuture<Long> createFuture = null;
+        ListenableFuture<Void> updateFuture = null;
         final TaskCreationEvent successEvent;
 
         if (isEditMode) {
-            if (taskId == null) { // Должно быть проверено ранее, но для безопасности
+            if (taskId == null) {
                 logger.error(TAG, "Task ID is null in edit mode!");
-                updateUiState(state -> state.copy(null, null, null, null, false, "Ошибка: ID задачи отсутствует.", null, null), false);
+                updateUiState(state -> state.copy(null, null, null, null, false, "Ошибка: ID задачи отсутствует.", null, null));
                 return;
             }
-            // Убедимся, что ID установлен в taskInputToSave
-            if (taskInputToSave.getId() == null) {
-                taskInputToSave.setId(taskId);
-            }
-            operationFuture = updateCalendarTaskUseCase.execute(taskInputToSave);
+            if (taskInputToSave.getId() == null) taskInputToSave.setId(taskId); // Убедимся, что ID установлен
+            updateFuture = updateCalendarTaskUseCase.execute(taskInputToSave);
             successEvent = TaskCreationEvent.TASK_UPDATED;
         } else {
-            operationFuture = createCalendarTaskUseCase.execute(taskInputToSave);
+            createFuture = createCalendarTaskUseCase.execute(taskInputToSave);
             successEvent = TaskCreationEvent.TASK_CREATED;
         }
 
-        Futures.addCallback(operationFuture, new FutureCallback<Object>() { // Object, т.к. Future<?>
+        ListenableFuture<?> finalFuture = isEditMode ? updateFuture : createFuture;
+
+        Futures.addCallback(finalFuture, new FutureCallback<Object>() {
             @Override
             public void onSuccess(Object result) {
                 logger.info(TAG, "Task save/update successful. Event: " + successEvent);
-                updateUiState(state -> state.copy(null, null, null, null, false, null, successEvent, null), true);
+                updateUiState(state -> state.copy(null, null, null, null, false, null, successEvent, null));
+                snackbarManager.showMessage(isEditMode ? "Задача обновлена" : "Задача создана");
             }
             @Override
             public void onFailure(@NonNull Throwable t) {
                 logger.error(TAG, "Failed to save/update task", t);
-                updateUiState(state -> state.copy(null, null, null, null, false, toUserFriendlyMessage(t), null, null), true);
+                updateUiState(state -> state.copy(null, null, null, null, false, toUserFriendlyMessage(t), null, null));
             }
-        }, defaultExecutor);
+        }, mainExecutor); // Используем mainExecutor для коллбэков, обновляющих UI
     }
 
-    public void clearError() { updateUiState(state -> state.copy(null, null, null, null, null, null, null, null), false); }
-    public void clearEvent() { updateUiState(state -> state.copy(null, null, null, null, null, null, null, null), false); }
+    public void clearError() { updateUiState(state -> state.copy(null, null, null, null, null, null, null, null)); }
+    public void clearEvent() { updateUiState(state -> state.copy(null, null, null, null, null, null, null, null)); }
 
     private boolean validateInput() {
         TaskCreationState currentState = _uiStateLiveData.getValue();
         if (currentState == null || currentState.getTaskInput().getTitle() == null || currentState.getTaskInput().getTitle().trim().isEmpty()) {
-            updateUiState(state -> state.copy(null, null, null, null, null, "Заголовок не может быть пустым", null, null), false);
+            updateUiState(state -> state.copy(null, null, null, null, null, "Заголовок не может быть пустым", null, null));
             return false;
         }
         return true;
@@ -394,20 +424,18 @@ public class TaskCreationViewModel extends ViewModel {
     public String getScreenTitle() { return isEditMode ? "Редактирование задачи" : "Новая задача"; }
     public String getSaveButtonText() { return isEditMode ? "Обновить задачу" : "Создать задачу"; }
 
-    private static String toUserFriendlyMessage(Throwable t) { // Сделал static
+    private static String toUserFriendlyMessage(Throwable t) {
         if (t instanceof IOException) return "Ошибка сети. Проверьте подключение.";
         if (t instanceof IllegalArgumentException) return "Некорректные данные: " + t.getMessage();
         if (t instanceof NoSuchElementException) return "Запрашиваемый элемент не найден.";
         if (t instanceof IllegalStateException) return "Ошибка состояния: " + t.getMessage();
-        return "Произошла неизвестная ошибка. Попробуйте снова.";
+        return "Произошла неизвестная ошибка: " + t.getMessage();
     }
 
     @Override
     protected void onCleared() {
         super.onCleared();
-        // Если была подписка observeForever на tagsLoadableLiveData (которая была LiveData от UseCase),
-        // ее нужно было бы здесь удалить. Но так как tagsLoadableLiveData теперь сама LiveData,
-        // Android обработает ее жизненный цикл.
-        logger.debug(TAG, "ViewModel cleared.");
+        // Отписываемся от LiveData, если использовали observeForever (здесь не используется)
+        logger.debug(TAG, "TaskCreationViewModel cleared.");
     }
 }
